                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 12-08-2005 changed: detection of interlaced material somewhat improved
  - 12-08-2005 changed: made rewind search for the right time pos after a seek by dropping frames after seek untill at righ position
  - 07-08-2005 updated codec.conf [ 1252569 ]
  - 06-08-2005 fixed: OGG files often crashed on exit or failed on open. Updated demux_ogg from mplayerhq cvs.
  - 25-06-2005 added: better way to detect if an mpeg sequence is progressive or not
  - 25-06-2005 fixed: made sure mplayer begins with uniting the caching thread, so as later crashes won't let that keep running
  - 25-06-2005 fixed: made mplayer set interlaced flag on mpeg2 video when decoding using libmpeg2
  - 25-06-2005 updated: ffmpeg to latest cvs as of now
  - 25-06-2005 added: [ 1236234 ] mplayer_GetAudioInfo returns wrong audio bitrate
  - 14-06-2005 added: readded a couple of other filters and fixed playback with noise filter
  - 14-06-2005 fixed: readded volume filter, was actually in use
  - 10-06-2005 fixed: playback using mplayer.dll without libavformat would never start, load of dll failed.
  - 10-06-2005 fixed: made libavformat conditional, just run configurexbmc --disable-libavformat
  - 10-06-2005 fixed: chipmunk playback caused by removal of dummy audio filter
  - 08-06-2005 updated: fixed two linking errors so that mplayer.dll can be compiled without the last of libavcodecs encoders.
  - 08-06-2005 updated: system headers to use with mingw 3.4.4 (USE GCC 3.4.4 OR HIGHER 3.4.x SERIES FROM NOW)
  - 08-06-2005 removed: unneeded video/audio filters
  - 08-06-2005 moved: xbmc hookup for audio into ao_directx instead of win32